--- a/index.html
+++ b/index.html
@@ -4,46 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="fundo">
-        <h1 class="Guilherme">Guilherme Moreno</h1>
+        <h1 class="Guilherme">CRIADO POR G.MORENO !</h1>
         <div class="calculadora">
-            <h1>Calculadora</h1>
-            <p id="resultado">0</p>
+            <h1>CALCULADORA</h1>
+            <p id="resultado"></p>
             <table>
                 <tr>
-                   <td><button class="botao">C</button></td>
-                   <td><button class="botao"><</button></td>
-                   <td><button class="botao">/</button></td>
-                   <td><button class="botao">X</button></td>
+                   <td><button class="botao" onclick=clean()>C</button></td>
+                   <td><button class="botao" onclick="back('<')"><</button></td>
+                   <td><button class="botao" onclick="insert('/')">/</button></td>
+                   <td><button class="botao" onclick="insert('*')">X</button></td>
                 </tr>
                 <tr>
-                    <td><button class="botao">7</button></td>
-                    <td><button class="botao">8</button></td>
-                    <td><button class="botao">9</button></td>
-                    <td><button class="botao">-</button></td>
+                    <td><button class="botao" onclick="insert('7')">7</button></td>
+                    <td><button class="botao" onclick="insert('8')">8</button></td>
+                    <td><button class="botao" onclick="insert('9')">9</button></td>
+                    <td><button class="botao" onclick="insert('-')">-</button></td>
                  </tr>
                  <tr>
-                    <td><button class="botao">4</button></td>
-                    <td><button class="botao">5</button></td>
-                    <td><button class="botao">6</button></td>
-                    <td><button class="botao">+</button></td>
+                    <td><button class="botao" onclick="insert('4')">4</button></td>
+                    <td><button class="botao" onclick="insert('5')">5</button></td>
+                    <td><button class="botao" onclick="insert('6')">6</button></td>
+                    <td><button class="botao" onclick="insert('+')">+</button></td>
                  </tr>
                  <tr>
-                    <td><button class="botao">1</button></td>
-                    <td><button class="botao">2</button></td>
-                    <td><button class="botao">3</button></td>
-                    <td rowspan="2"><button class="botao" style="height: 106px;">=</button></td>
+                    <td><button class="botao" onclick="insert('1')">1</button></td>
+                    <td><button class="botao" onclick="insert('2')">2</button></td>
+                    <td><button class="botao" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
                  </tr>
                  <tr>
-                    <td colspan="2"><button class="botao" style="width: 106px;">0</button></td>
-                    <td><button class="botao">.</button></td>
+                    <td colspan="2"><button class="botao" style="width: 124px;" onclick="insert('0')">0</button></td>
+                    <td><button class="botao" onclick="insert('.')">.</button></td>
                  </tr>
                
             </table>
         </div>
     </div>
+    <script>
+        function insert(num)
+        {
+          var numero = document.getElementById('resultado').innerHTML;
+          document.getElementById('resultado').innerHTML =numero + num;
+        }
+        function clean()
+        {
+            document.getElementById('resultado').innerHTML="";
+        }
+        function back()
+        {
+        var resultado = document.getElementById('resultado').innerHTML;
+        document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1); 
+        }
+
+        function calcular()
+        {
+            var resultado = document.getElementById('resultado').innerHTML;
+            if (resultado)
+        {
+            document.getElementById('resultado').innerHTML = eval(resultado);
+        }
+        }
+    
+    </script>
 </body>
 </html>
