--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculadora</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-query.css">
 </head>
 <body>
     <div class="fundo">
