--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="fundo">
-        <h1 class="Guilherme">CRIADO POR G.MORENO !</h1>
+        <h1 class="Guilherme"><a href="https://github.com/guilhermeavilamoreno">CRIADO POR G.MORENO</a> !</h1>
         <div class="calculadora">
             <h1>CALCULADORA</h1>
             <p id="resultado"></p>
@@ -37,7 +37,7 @@
                     <td><button class="botao" onclick="insert('1')">1</button></td>
                     <td><button class="botao" onclick="insert('2')">2</button></td>
                     <td><button class="botao" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button class="botao" style="height: 106px;" onclick="calcular()">=</button></td>
+                    <td rowspan="2"><button class="botao" style="height: 121px;" onclick="calcular()">=</button></td>
                  </tr>
                  <tr>
                     <td colspan="2"><button class="botao" style="width: 124px;" onclick="insert('0')">0</button></td>
