--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="fundo">
-        <h1 class="Guilherme"><a href="https://github.com/guilhermeavilamoreno">CRIADO POR G.MORENO</a> !</h1>
+        <h1 class="Guilherme"><a href="https://github.com/guilhermeavilamoreno">CRIADO POR G.MORENO !</a> </h1>
         <div class="calculadora">
             <h1>CALCULADORA</h1>
             <p id="resultado"></p>
